--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     <button type="button" class="btn btn-outline-light btn-lg download-button"><i
                             class="fa-brands fa-google-play"></i> Download</button>
                 </div>
-                <div class="col-lg-6">
+                <div class="col-lg-6 img-container">
                     <img class="Title-Image" src="images/iphone6.png" alt="iphone-mockup">
                 </div>
             </div>
@@ -185,15 +185,6 @@
                 </div>
             </div>
         </div>
-
-
-
-
-
-
-
-
-
 
     </section>
 
