--- a/index.html
+++ b/index.html
@@ -194,16 +194,22 @@
     <section id="cta">
 
         <h3>Find the True Love of Your Dog's Life Today.</h3>
-        <button type="button">Download</button>
-        <button type="button">Download</button>
-
+        <button type="button" class="btn btn-dark btn-lg download-button"><i class="fa-brands fa-apple"></i>
+            Download</button>
+        <button type="button" class="btn btn-light btn-lg download-button"><i
+            class="fa-brands fa-google-play"></i> Download</button>
     </section>
 
 
     <!-- Footer -->
 
     <footer id="footer">
-
+        <div>
+            <i class="fa-brands fa-twitter footer-icon"></i>
+            <i class="fa-brands fa-facebook footer-icon"></i>
+            <i class="fa-brands fa-instagram footer-icon"></i>
+            <i class="fa-solid fa-envelope footer-icon"></i>
+        </div>
         <p>© Copyright TinDog</p>
 
     </footer>
