--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto">
-                        <li class="nav-item"><a href="#" class="nav-link">Contact</a></li>
-                        <li class="nav-item"><a href="#" class="nav-link">Pricing</a></li>
-                        <li class="nav-item"><a href="#" class="nav-link">Download</a></li>
+                        <li class="nav-item"><a href="#footer" class="nav-link">Contact</a></li>
+                        <li class="nav-item"><a href="#pricing" class="nav-link">Pricing</a></li>
+                        <li class="nav-item"><a href="#cta" class="nav-link">Download</a></li>
                     </ul>
                 </div>
             </nav>
@@ -196,8 +196,8 @@
         <h3>Find the True Love of Your Dog's Life Today.</h3>
         <button type="button" class="btn btn-dark btn-lg download-button"><i class="fa-brands fa-apple"></i>
             Download</button>
-        <button type="button" class="btn btn-light btn-lg download-button"><i
-            class="fa-brands fa-google-play"></i> Download</button>
+        <button type="button" class="btn btn-light btn-lg download-button"><i class="fa-brands fa-google-play"></i>
+            Download</button>
     </section>
 
 
